# Actformers

./: README-new.md  README-old.md  README.md  actformer_architecture.py  experiment_results.json  pyproject.toml  requirements.txt
actformers/: __init__.py
actformers/composition/: __init__.py  discovery.py  macro_library.py
actformers/core/: __init__.py  action_space.py  execution_engine.py  model.py  primitives.py  working_memory.py
actformers/data/: __init__.py  datasets.py  trace_generator.py
actformers/data/tasks/: __init__.py  addition.py  digit_reversal.py  multiplication.py  subtraction.py
actformers/encoding/: __init__.py  numeric.py  output.py
actformers/eval/: __init__.py  evaluator.py  metrics.py
actformers/prediction/: __init__.py  action_predictor.py  value_net.py
actformers/training/: __init__.py  curriculum.py  losses.py  rl_trainer.py  supervised_trainer.py
architecture/: actformer_starter.py
configs/experiment/: addition_baseline.yaml
configs/model/: large.yaml  medium.yaml  small.yaml
configs/training/: curriculum.yaml  rl.yaml
resources/: actformer_architecture.py
scripts/: eval.py  run_all_experiments.py  train.py  visualize_actions.py
tests/: test_action_space.py  test_execution_engine.py  test_trace_generator.py  test_working_memory.py
