[project]
name = "actformers"
version = "2.0.0"
description = "Actformer: A Novel Neural Architecture That Learns Actions, Not Tokens"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Abhishek Shah"},
]

dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.5",
    "tqdm>=4.64",
    "tensorboard>=2.9",
    "wandb>=0.16",
    "rich>=13.0",
    "einops>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "hydra-core>=1.3",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["actformers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"